# top-down-2d-rts-prototype-nano-swarm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Cargo.toml  README.md
.pi/: subagents.json
.pi/afk/: config.json  config.jsonc
assets/: mineral processing.png.kra  minerals.png.kra
assets/shaders/: background_shader.wgsl  zone_shader.wgsl
benches/: swarm_acceptance.rs
config/: game_settings.ron
docs/adr/: 0001-pi-afk-extension-for-github-issues.md  0002-detached-in-process-afk-orchestration.md  0003-afk-structured-result-tools.md  0004-world-space-nanobots.md  0005-tiered-logistics-flow.md  0006-run-afk-roles-as-sdk-role-sessions.md  0007-defender-spatial-pressure.md  0008-hauler-route-cost-fields.md  0009-regional-intent-allocation.md  0010-binary-intent-paint.md  0011-owner-scoped-production-capacity-commitments.md  0012-binary-structure-operation.md  0013-typed-population-demand-and-production-priority.md
docs/agents/: issue-tracker.md  testing.md
docs/performance/: regional-allocation.md
screenshots/: build_zone_placement.rs  defender_spread.rs  fill_indicators.rs  harness.rs  idle_spread.rs  main.rs  physical_logistics.rs  production_priority_panel.rs  production_ratio_panel.rs  regional_allocation.rs  smoke.rs  world_space_nanobots.rs  zone_binary_overlay.rs  zone_strength_ramp.rs
scripts/: generate_prototype_assets.sh  run_opencode_afk.sh
src/: ai.rs  building.rs  creature.rs  fly_camera.rs  game_settings.rs  groups_merge_split.rs  highlight_unit.rs  intent.rs  lib.rs  main.rs  materials.rs  nanobot.rs  resources.rs  scenario.rs  spatial.rs  structure_overlay.rs  structure_sprites.rs  tactical_overlay.rs  ui.rs  ui_setup.rs  unit_select.rs  zones.rs
src/fly_camera/: camera_move.rs  camera_zoom.rs
src/nanobot/: allocation.rs  autonomy.rs  build.rs  cargo.rs  charge.rs  collapse.rs  combat.rs  components.rs  consts.rs  debug.rs  defend.rs  demand.rs  gather.rs  groups_merge_split.rs  haul.rs  logistics_leg.rs  maintenance.rs  move_system.rs  opponent.rs  placement.rs  planned.rs  population.rs  production.rs  route.rs  spatial_pressure.rs  spread.rs  sprites.rs  unit_select.rs
src/ui/: button_bg_interaction.rs  consts.rs  fps_count.rs  intent_layer_panel.rs  production_priority_panel.rs  production_ratio_panel.rs  selected_groups_list.rs  selected_groups_system.rs  status_panel.rs  ui_events.rs  ui_interaction_system.rs  ui_setup.rs  zone_button.rs
src/zones/: zone_brush.rs
tests/: behavior.rs  build_zone_behavior.rs  charger_behavior.rs  defend_zone_behavior.rs  gather_zone_behavior.rs  hauler_corridor_behavior.rs  intent_brush_behavior.rs  maintenance_behavior.rs  nanobot_autonomy_behavior.rs  opponent_swarm_behavior.rs  playtest.rs  production_collapse_behavior.rs  production_facility_behavior.rs  stockpile_and_haul_behavior.rs
tests/behavior/: actionable_projection.rs  automatic_construction_issue34.rs  build_zone.rs  central_demand_allocator.rs  charger.rs  charger_planned.rs  combat.rs  defend_zone.rs  fixed_simulation.rs  full_source_stockpile.rs  gather_overlap.rs  gather_owner_filter.rs  gather_zone.rs  gradual_hauler_pickup.rs  hauler_corridor.rs  (+26 more)
(+24 files in other folders)
