[package]
name = "top-down-2d-rts-prototype-nano-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
thiserror = "1.0"
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
ron = "0.8.0"
rand = { version = "0.8.5" }
log = "0.4.17"
pathfinding = "4.2.1"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
# lto = "thin"
debug = true

[profile.bench]
# lto = "thin"
debug = true
