[package]
name = "top-down-2d-rts-prototype-nano-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18.1", features = [
    "dynamic_linking",
    "file_watcher",
    "wayland",
] }
thiserror = "2.0.18"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.1"
rand = { version = "0.10.1" }
log = "0.4.32"
pathfinding = "4.15.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
debug = true

[profile.bench]
lto = "thin"

[[bench]]
name = "swarm_acceptance"
harness = false

# Window-creating (screenshot) tests run on the main thread via a
# custom `main()` driven by libtest-mimic, so they cannot use cargo's
# default harness. They are marked ignored and skipped by default;
# run them with: cargo test --test screenshots -- --ignored
# (filter: cargo test --test screenshots -- --ignored smoke)
[[test]]
name = "screenshots"
path = "screenshots/main.rs"
harness = false

[dev-dependencies]
libtest-mimic = "0.8.2"
criterion = { version = "0.8", features = ["html_reports"] }
